# quasar

./: README.md  docker-compose.yml  hft_gateway.conf
monitoring/: prometheus.yml
results/: end_to_end_performance_analysis.md
results/e2e_tests_20250924_184234/: comprehensive_analysis.md
results/e2e_tests_20250924_184234/csv/: matching_engine_isolated.csv
results/e2e_tests_20250924_215804/: comprehensive_analysis.md
results/e2e_tests_20250924_215804/csv/: kafka_pipeline_throughput.csv  matching_engine_isolated.csv
results/tcp_e2e_final_20250924_231038/: comprehensive_e2e_performance_analysis.md  e2e_performance_metrics.csv
scripts/: build-all.sh  run-full-tests.sh  run-kafka-pipeline-test.sh  run-performance-tests.sh  run-true-e2e-tests.sh  start-local.sh  stop-all.sh
services/hft-gateway/: CMakeLists.txt  Dockerfile
services/hft-gateway/include/: HFTGateway.h
services/hft-gateway/include/kafka/: KafkaClient.h
services/hft-gateway/src/: HFTGateway.cpp  main.cpp
services/hft-gateway/src/kafka/: KafkaClient.cpp
services/hft-gateway/tests/: CMakeLists.txt  ClientSessionTests.cpp  GatewayConfigTests 2.cpp  GatewayConfigTests.cpp  HFTGatewayTests.cpp
services/matching-engine/: .gitignore  CMakeLists.txt  Dockerfile  LOAD_TESTING.md
services/matching-engine/include/core/: MatchingEngine.h  Order.h  OrderBook.h  Trade.h
services/matching-engine/include/kafka/: KafkaClient.h
services/matching-engine/schema/: messages.fbs
services/matching-engine/scripts/: clean.sh
services/matching-engine/src/core/: MatchingEngine.cpp  Order.cpp  OrderBook.cpp  Trade.cpp
services/matching-engine/src/kafka/: KafkaClient.cpp
services/matching-engine/src/main/: benchmark_main.cpp  kafka_consumer_main.cpp  pipeline_main.cpp
services/matching-engine/tests/: CMakeLists.txt  LoadTests.cpp  MatchingEngineTests.cpp  OrderBookTests.cpp
tests/: tcp_e2e_latency_test  tcp_e2e_latency_test.cpp
tests/end-to-end/: CMakeLists.txt  e2e_test.cpp
tests/load/: CMakeLists.txt  pipeline_load_test.cpp
